--- a/IBM.html
+++ b/IBM.html
@@ -56,7 +56,9 @@
         <section class="breadcrumb-area">
             <div class="container">
                 <div class="breadcrumb-content" data-aos="fade-up">
-                    <h1 class="section-heading" style="text-align: center;"><img src="assets/images/star-2.png" alt="Star"> DATA SCIENCE PROFESSIONAL <img src="assets/images/star-2.png" alt="Star"></h1>
+                    <h1 class="section-heading" style="text-align: center;"><img src="assets/images/star-2.png"
+                            alt="Star"> DATA SCIENCE PROFESSIONAL <img src="assets/images/star-2.png"
+                            alt="Star"></h1>
                 </div>
             </div>
         </section>
@@ -96,8 +98,16 @@
                         </div>
                         <div class="right-details">
                             <h3>Description</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit utsadi sfejdis aliquam, purus sit amet luctus venenatis, lectus magna sansit trandis fringilla urna, porttitor rhoncus dolor purus non enim dollors praesent tabasi elementum facilisis leo, vel fringilla est ullamcorper eget nulla facilisi etiam facilisis dignissim diam quis enim lobortis scelerisque.</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit utsadi sfejdis aliquam, purus sit amet luctus venenatis, lectus magna sansit trandis fringilla urna, porttitor rhoncus dolor purus non enim dollors praesent tabasi elementum facilisis leo, vel fringilla est ullamcorper eget nulla facilisi etiam facilisis dignissim diam quis enim lobortis scelerisque iin fermentumisa dui faucibus in ornare.Lorem ipsum dolor sit.</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit utsadi sfejdis aliquam, purus sit
+                                amet luctus venenatis, lectus magna sansit trandis fringilla urna, porttitor rhoncus dolor
+                                purus non enim dollors praesent tabasi elementum facilisis leo, vel fringilla est
+                                ullamcorper eget nulla facilisi etiam facilisis dignissim diam quis enim lobortis
+                                scelerisque.</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit utsadi sfejdis aliquam, purus sit
+                                amet luctus venenatis, lectus magna sansit trandis fringilla urna, porttitor rhoncus dolor
+                                purus non enim dollors praesent tabasi elementum facilisis leo, vel fringilla est
+                                ullamcorper eget nulla facilisi etiam facilisis dignissim diam quis enim lobortis
+                                scelerisque iin fermentumisa dui faucibus in ornare.Lorem ipsum dolor sit.</p>
                         </div>
                     </div>
                 </div>
@@ -107,17 +117,78 @@
         <section class="project-details-wrap">
             <div class="container">
                 <div class="project-details-2-img mb-24" data-aos="zoom-in">
-                    <img src="assets/images/Mridul_IBM.jpg" alt="Project" style="max-width: 100%; max-height: 100%; object-fit: contain;">
+                    <img src="assets/images/Mridul_IBM.jpg" alt="Project"
+                        style="max-width: 100%; max-height: 100%; object-fit: contain;">
                 </div>
             </div>
         </section>
 
-        <!-- Badge -->
-        <section class="badge-section">
-            <div class="container">
-                <div class="badge-content" data-aos="zoom-in">
-                    <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="d32781dd-6b1b-461b-b792-df6755c56010" data-share-badge-host="https://www.credly.com"></div>
-                    <script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
+        <!-- Badges -->
+        <section class="container">
+            <div class="badge-container">
+                <div class="badge-row">
+                    <div class="badge-item">
+                        <div data-iframe-width="150" data-iframe-height="270"
+                            data-share-badge-id="ae3c73c4-e4fa-4d6b-bf3f-f6df4cb9d7e9"
+                            data-share-badge-host="https://www.credly.com"></div>
+                        <script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
+                    </div>
+                    <div class="badge-item">
+                        <div data-iframe-width="150" data-iframe-height="270"
+                            data-share-badge-id="294f3878-595a-4a22-8885-03a2582fd41b"
+                            data-share-badge-host="https://www.credly.com"></div>
+                        <script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
+                    </div>
+                    <div class="badge-item">
+                        <div data-iframe-width="150" data-iframe-height="270"
+                            data-share-badge-id="bcd1e94a-6045-4682-8734-4c3644e7e4a8"
+                            data-share-badge-host="https://www.credly.com"></div>
+                        <script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
+                    </div>
+                    <div class="badge-item">
+                        <div data-iframe-width="150" data-iframe-height="270"
+                            data-share-badge-id="d32781dd-6b1b-461b-b792-df6755c56010"
+                            data-share-badge-host="https://www.credly.com"></div>
+                        <script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
+                    </div>
+                    <div class="badge-item">
+                        <div data-iframe-width="150" data-iframe-height="270"
+                            data-share-badge-id="d81d80fe-2c44-4c4f-aeaa-64aaa26845cd"
+                            data-share-badge-host="https://www.credly.com"></div>
+                        <script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
+                    </div>
+                </div>
+                <div class="badge-row">
+                    <div class="badge-item">
+                        <div data-iframe-width="150" data-iframe-height="270"
+                            data-share-badge-id="1bbebfad-09bb-4147-8426-1e637c772842"
+                            data-share-badge-host="https://www.credly.com"></div>
+                        <script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
+                    </div>
+                    <div class="badge-item">
+                        <div data-iframe-width="150" data-iframe-height="270"
+                            data-share-badge-id="5c5818be-b423-4161-8890-6288807ae55c"
+                            data-share-badge-host="https://www.credly.com"></div>
+                        <script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
+                    </div>
+                    <div class="badge-item">
+                        <div data-iframe-width="150" data-iframe-height="270"
+                            data-share-badge-id="50cba59a-5e73-4938-b845-93a1157ee687"
+                            data-share-badge-host="https://www.credly.com"></div>
+                        <script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
+                    </div>
+                    <div class="badge-item">
+                        <div data-iframe-width="150" data-iframe-height="270"
+                            data-share-badge-id="f5482ede-8230-499d-b268-e8c1a67b3f1d"
+                            data-share-badge-host="https://www.credly.com"></div>
+                        <script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
+                    </div>
+                    <div class="badge-item">
+                        <div data-iframe-width="150" data-iframe-height="270"
+                            data-share-badge-id="1d6a6542-b595-4e02-81fd-ccde10ab6edd"
+                            data-share-badge-host="https://www.credly.com"></div>
+                        <script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
+                    </div>
                 </div>
             </div>
         </section>
@@ -135,17 +206,21 @@
                         <li><a href="works.html">Works</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
-                    <p>Let's deliver exceptional projects together. <span>Thank you!</span></p>
+                    <div class="social-links">
+                        <a href="#"><i class="iconoir-linkedin"></i></a>
+                        <a href="#"><i class="iconoir-github"></i></a>
+                        <a href="#"><i class="iconoir-twitter"></i></a>
+                    </div>
                 </div>
             </div>
         </footer>
 
     </main>
 
-    <script src="assets/js/jquery-3.6.4.js"></script>
-    <script src="assets/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
     <script src="assets/js/aos.js"></script>
     <script src="assets/js/main.js"></script>
+
 </body>
 
 </html>
