--- a/IBM.html
+++ b/IBM.html
@@ -3,148 +3,55 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mridul Ranjan Upadhyay</title>
-
-    <link rel="preconnect" href="https://fonts.googleapis.com/">
-    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800&amp;display=swap" rel="stylesheet">
-
-    <link rel="stylesheet" href="../../../cdn.jsdelivr.net/gh/iconoir-icons/iconoir%40main/css/iconoir.css">
-
+    <title>My Portfolio</title>
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/aos.css">
-
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
 
-    <main class="main-workdetails-page">
-
-        <!-- Header -->
-        <header class="header-area">
-            <div class="container">
-                <div class="gx-row d-flex align-items-center justify-content-between">
-                    <a href="index.html" class="logo">
-                        <img src="assets/images/logo.png" alt="Logo">
-                    </a>
-
-                    <nav class="navbar">
-                        <ul class="menu">
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="about.html">About</a></li>
-                            <li><a href="works.html">Works</a></li>
-                            <li><a href="contact.html">Contact</a></li>
-                        </ul>
-                        <a href="contact.html" class="theme-btn">Let's talk</a>
-                    </nav>
-
-                    <a href="contact.html" class="theme-btn">Let's talk</a>
-
-                    <div class="show-menu">
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                    </div>
-                </div>
+    <header class="header-area">
+        <div class="container">
+            <div class="header-content">
+                <a href="index.html" class="logo">
+                    <img src="assets/images/logo.png" alt="Logo">
+                </a>
+                <ul class="main-menu">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="works.html">Works</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
             </div>
-        </header>
+        </div>
+    </header>
 
-        <!-- Breadcrumb -->
-        <section class="breadcrumb-area">
+    <main>
+
+        <section class="hero-area">
             <div class="container">
-                <div class="breadcrumb-content" data-aos="fade-up">
-                    <h1 class="section-heading" style="text-align: center;"><img src="assets/images/star-2.png"
-                            alt="Star"> DATA SCIENCE PROFESSIONAL <img src="assets/images/star-2.png"
-                            alt="Star"></h1>
+                <div class="hero-content">
+                    <h1>Welcome to My Portfolio</h1>
+                    <p>I am a passionate web developer with experience in HTML, CSS, and JavaScript.</p>
                 </div>
             </div>
         </section>
 
-        <!-- Project Details -->
-        <section class="container">
-            <div class="project-details-2-img mb-24" data-aos="zoom-in">
-                <img src="assets/images/IBM.jpg" alt="Project">
-            </div>
-        </section>
-
-        <section class="project-details-wrap">
+        <section class="about-area">
             <div class="container">
-                <div data-aos="zoom-in">
-                    <div class="project-about-2 d-flex shadow-box mb-24">
-                        <img src="assets/images/bg1.png" alt="BG" class="bg-img">
-                        <div class="left-details">
-                            <img src="assets/images/icon3.png" alt="Icon">
-                            <ul>
-                                <li>
-                                    <p>Year</p>
-                                    <h4>2023</h4>
-                                </li>
-                                <li>
-                                    <p>Client</p>
-                                    <h4>Raven Studio</h4>
-                                </li>
-                                <li>
-                                    <p>Services</p>
-                                    <h4>Web Design</h4>
-                                </li>
-                                <li>
-                                    <p>Project</p>
-                                    <h4>Dynamic</h4>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="right-details">
-                            <h3>Description</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit utsadi sfejdis aliquam, purus sit
-                                amet luctus venenatis, lectus magna sansit trandis fringilla urna, porttitor rhoncus dolor
-                                purus non enim dollors praesent tabasi elementum facilisis leo, vel fringilla est
-                                ullamcorper eget nulla facilisi etiam facilisis dignissim diam quis enim lobortis
-                                scelerisque.</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit utsadi sfejdis aliquam, purus sit
-                                amet luctus venenatis, lectus magna sansit trandis fringilla urna, porttitor rhoncus dolor
-                                purus non enim dollors praesent tabasi elementum facilisis leo, vel fringilla est
-                                ullamcorper eget nulla facilisi etiam facilisis dignissim diam quis enim lobortis
-                                scelerisque iin fermentumisa dui faucibus in ornare.Lorem ipsum dolor sit.</p>
-                        </div>
-                    </div>
+                <div class="about-content">
+                    <h2>About Me</h2>
+                    <p>I am a dedicated and detail-oriented web developer with a strong passion for creating visually appealing and user-friendly websites. I have experience in front-end development using HTML, CSS, and JavaScript. I enjoy turning complex problems into simple and elegant solutions. In my free time, I love to explore new technologies and work on personal projects.</p>
                 </div>
             </div>
         </section>
 
-        <section class="project-details-wrap">
+        <section class="works-area">
             <div class="container">
-                <div class="project-details-2-img mb-24" data-aos="zoom-in">
-                    <img src="assets/images/Mridul_IBM.jpg" alt="Project"
-                        style="max-width: 100%; max-height: 100%; object-fit: contain;">
-                </div>
-            </div>
-        </section>
-
-        <!-- Badges -->
-        <section class="container">
-            <div class="badge-container">
+                <h2>My Badges</h2>
                 <div class="badge-row">
-                    <div class="badge-item">
-                        <div data-iframe-width="150" data-iframe-height="270"
-                            data-share-badge-id="ae3c73c4-e4fa-4d6b-bf3f-f6df4cb9d7e9"
-                            data-share-badge-host="https://www.credly.com"></div>
-                        <script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
-                    </div>
-                    <div class="badge-item">
-                        <div data-iframe-width="150" data-iframe-height="270"
-                            data-share-badge-id="294f3878-595a-4a22-8885-03a2582fd41b"
-                            data-share-badge-host="https://www.credly.com"></div>
-                        <script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
-                    </div>
-                    <div class="badge-item">
-                        <div data-iframe-width="150" data-iframe-height="270"
-                            data-share-badge-id="bcd1e94a-6045-4682-8734-4c3644e7e4a8"
-                            data-share-badge-host="https://www.credly.com"></div>
-                        <script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
-                    </div>
                     <div class="badge-item">
                         <div data-iframe-width="150" data-iframe-height="270"
                             data-share-badge-id="d32781dd-6b1b-461b-b792-df6755c56010"
@@ -157,8 +64,6 @@
                             data-share-badge-host="https://www.credly.com"></div>
                         <script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
                     </div>
-                </div>
-                <div class="badge-row">
                     <div class="badge-item">
                         <div data-iframe-width="150" data-iframe-height="270"
                             data-share-badge-id="1bbebfad-09bb-4147-8426-1e637c772842"
@@ -167,25 +72,45 @@
                     </div>
                     <div class="badge-item">
                         <div data-iframe-width="150" data-iframe-height="270"
-                            data-share-badge-id="5c5818be-b423-4161-8890-6288807ae55c"
+                            data-share-badge-id="68b7403e-b075-491e-99b5-eeb2a8d3ad30"
                             data-share-badge-host="https://www.credly.com"></div>
                         <script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
                     </div>
                     <div class="badge-item">
                         <div data-iframe-width="150" data-iframe-height="270"
-                            data-share-badge-id="50cba59a-5e73-4938-b845-93a1157ee687"
+                            data-share-badge-id="b64e9f9a-71da-4f56-88e4-1f72f3158df8"
+                            data-share-badge-host="https://www.credly.com"></div>
+                        <script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
+                    </div>
+                </div>
+                <div class="badge-row">
+                    <div class="badge-item">
+                        <div data-iframe-width="150" data-iframe-height="270"
+                            data-share-badge-id="0c2a1b6f-f5a4-4c4d-9dbf-929d0b94220e"
                             data-share-badge-host="https://www.credly.com"></div>
                         <script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
                     </div>
                     <div class="badge-item">
                         <div data-iframe-width="150" data-iframe-height="270"
-                            data-share-badge-id="f5482ede-8230-499d-b268-e8c1a67b3f1d"
+                            data-share-badge-id="ae5c1891-87f5-49bc-9326-8db3e0e54619"
                             data-share-badge-host="https://www.credly.com"></div>
                         <script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
                     </div>
                     <div class="badge-item">
                         <div data-iframe-width="150" data-iframe-height="270"
-                            data-share-badge-id="1d6a6542-b595-4e02-81fd-ccde10ab6edd"
+                            data-share-badge-id="ffed8eae-04ab-42ae-81f1-ef98fb4f6d0e"
+                            data-share-badge-host="https://www.credly.com"></div>
+                        <script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
+                    </div>
+                    <div class="badge-item">
+                        <div data-iframe-width="150" data-iframe-height="270"
+                            data-share-badge-id="9ab6764c-3fe6-4e68-8c1f-7725e9edcdd3"
+                            data-share-badge-host="https://www.credly.com"></div>
+                        <script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
+                    </div>
+                    <div class="badge-item">
+                        <div data-iframe-width="150" data-iframe-height="270"
+                            data-share-badge-id="41cc48c7-8a6c-47f9-8c96-22a774785a43"
                             data-share-badge-host="https://www.credly.com"></div>
                         <script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
                     </div>
@@ -193,34 +118,38 @@
             </div>
         </section>
 
-        <!-- Footer -->
-        <footer class="footer-area">
+        <section class="contact-area">
             <div class="container">
-                <div class="footer-content text-center">
-                    <a href="index.html" class="logo">
-                        <img src="assets/images/logo.png" alt="Logo">
-                    </a>
-                    <ul class="footer-menu">
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="works.html">Works</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                    </ul>
-                    <div class="social-links">
-                        <a href="#"><i class="iconoir-linkedin"></i></a>
-                        <a href="#"><i class="iconoir-github"></i></a>
-                        <a href="#"><i class="iconoir-twitter"></i></a>
+                <h2>Contact Me</h2>
+                <form action="submit-form.php" method="POST">
+                    <div class="form-group">
+                        <label for="name">Your Name</label>
+                        <input type="text" name="name" id="name" required>
                     </div>
-                </div>
+                    <div class="form-group">
+                        <label for="email">Your Email</label>
+                        <input type="email" name="email" id="email" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="message">Your Message</label>
+                        <textarea name="message" id="message" rows="5" required></textarea>
+                    </div>
+                    <button type="submit">Send Message</button>
+                </form>
             </div>
-        </footer>
+        </section>
 
     </main>
+
+    <footer class="footer-area">
+        <div class="container">
+            <p>&copy; 2023 My Portfolio. All rights reserved.</p>
+        </div>
+    </footer>
 
     <script src="assets/js/bootstrap.min.js"></script>
     <script src="assets/js/aos.js"></script>
     <script src="assets/js/main.js"></script>
-
 </body>
 
 </html>
