--- a/IBM.html
+++ b/IBM.html
@@ -112,11 +112,34 @@
             </div>
         </section>
 
-        <!-- Badge -->
+        <!-- Badges -->
         <section class="badge-section">
             <div class="container">
                 <div class="badge-content" data-aos="zoom-in">
-                    <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="d32781dd-6b1b-461b-b792-df6755c56010" data-share-badge-host="https://www.credly.com"></div>
+                    <div class="badge-row">
+                        <!-- Badge 1 -->
+                        <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="ae3c73c4-e4fa-4d6b-bf3f-f6df4cb9d7e9" data-share-badge-host="https://www.credly.com"></div>
+                        <!-- Badge 2 -->
+                        <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="294f3878-595a-4a22-8885-03a2582fd41b" data-share-badge-host="https://www.credly.com"></div>
+                        <!-- Badge 3 -->
+                        <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="bcd1e94a-6045-4682-8734-4c3644e7e4a8" data-share-badge-host="https://www.credly.com"></div>
+                        <!-- Badge 4 -->
+                        <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="d32781dd-6b1b-461b-b792-df6755c56010" data-share-badge-host="https://www.credly.com"></div>
+                        <!-- Badge 5 -->
+                        <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="d81d80fe-2c44-4c4f-aeaa-64aaa26845cd" data-share-badge-host="https://www.credly.com"></div>
+                    </div>
+                    <div class="badge-row">
+                        <!-- Badge 6 -->
+                        <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="1bbebfad-09bb-4147-8426-1e637c772842" data-share-badge-host="https://www.credly.com"></div>
+                        <!-- Badge 7 -->
+                        <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="5c5818be-b423-4161-8890-6288807ae55c" data-share-badge-host="https://www.credly.com"></div>
+                        <!-- Badge 8 -->
+                        <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="50cba59a-5e73-4938-b845-93a1157ee687" data-share-badge-host="https://www.credly.com"></div>
+                        <!-- Badge 9 -->
+                        <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="f5482ede-8230-499d-b268-e8c1a67b3f1d" data-share-badge-host="https://www.credly.com"></div>
+                        <!-- Badge 10 -->
+                        <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="1d6a6542-b595-4e02-81fd-ccde10ab6edd" data-share-badge-host="https://www.credly.com"></div>
+                    </div>
                     <script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
                 </div>
             </div>
