--- a/IBM.html
+++ b/IBM.html
@@ -116,7 +116,7 @@
 <section class="badge-section">
     <div class="container">
         <div class="badge-content" data-aos="zoom-in">
-            <div class="badge-row">
+            <div class="badge-row" style="justify-content: center;">
                 <!-- Badge 1 -->
                 <div class="badge-col" data-iframe-width="200" data-iframe-height="360" data-share-badge-id="ae3c73c4-e4fa-4d6b-bf3f-f6df4cb9d7e9" data-share-badge-host="https://www.credly.com"></div>
                 <!-- Badge 2 -->
@@ -128,7 +128,7 @@
                 <!-- Badge 5 -->
                 <div class="badge-col" data-iframe-width="200" data-iframe-height="360" data-share-badge-id="d81d80fe-2c44-4c4f-aeaa-64aaa26845cd" data-share-badge-host="https://www.credly.com"></div>
             </div>
-            <div class="badge-row">
+            <div class="badge-row" style="justify-content: center; margin-top: 20px;">
                 <!-- Badge 6 -->
                 <div class="badge-col" data-iframe-width="200" data-iframe-height="360" data-share-badge-id="1bbebfad-09bb-4147-8426-1e637c772842" data-share-badge-host="https://www.credly.com"></div>
                 <!-- Badge 7 -->
@@ -144,6 +144,7 @@
         <script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
     </div>
 </section>
+
 
 
         <!-- Footer -->
