--- a/IBM.html
+++ b/IBM.html
@@ -116,7 +116,7 @@
 <section class="badge-section">
     <div class="container">
         <div class="badge-content" data-aos="zoom-in">
-            <div class="badge-row" style="justify-content: center;">
+            <div class="badge-row" style="display: flex; justify-content: space-between;">
                 <!-- Badge 1 -->
                 <div class="badge-col" data-iframe-width="200" data-iframe-height="360" data-share-badge-id="ae3c73c4-e4fa-4d6b-bf3f-f6df4cb9d7e9" data-share-badge-host="https://www.credly.com"></div>
                 <!-- Badge 2 -->
@@ -128,7 +128,7 @@
                 <!-- Badge 5 -->
                 <div class="badge-col" data-iframe-width="200" data-iframe-height="360" data-share-badge-id="d81d80fe-2c44-4c4f-aeaa-64aaa26845cd" data-share-badge-host="https://www.credly.com"></div>
             </div>
-            <div class="badge-row" style="justify-content: center; margin-top: 20px;">
+            <div class="badge-row" style="display: flex; justify-content: space-between; margin-top: 0;">
                 <!-- Badge 6 -->
                 <div class="badge-col" data-iframe-width="200" data-iframe-height="360" data-share-badge-id="1bbebfad-09bb-4147-8426-1e637c772842" data-share-badge-host="https://www.credly.com"></div>
                 <!-- Badge 7 -->
@@ -138,15 +138,12 @@
                 <!-- Badge 9 -->
                 <div class="badge-col" data-iframe-width="200" data-iframe-height="360" data-share-badge-id="f5482ede-8230-499d-b268-e8c1a67b3f1d" data-share-badge-host="https://www.credly.com"></div>
                 <!-- Badge 10 -->
-                <div class="badge-col" data-iframe-width="200" data-iframe-height="360" data-share-badge-id="1d6a6542-b595-4e02-81fd-ccde10ab6edd" data-share-badge-host="https://www.credly.com"></div>
+                <div class="badge-col" data-iframe-width="200" data-iframe-height="360" data-share-badge-id="d65c0f3d-23e3-4596-8827-1ddfd724e9d7" data-share-badge-host="https://www.credly.com"></div>
             </div>
         </div>
         <script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
     </div>
 </section>
-
-
-
         <!-- Footer -->
         <footer class="footer-area">
             <div class="container">
