--- a/IBM.html
+++ b/IBM.html
@@ -128,7 +128,7 @@
                 <!-- Badge 5 -->
                 <div class="badge-col" data-iframe-width="200" data-iframe-height="360" data-share-badge-id="d81d80fe-2c44-4c4f-aeaa-64aaa26845cd" data-share-badge-host="https://www.credly.com"></div>
             </div>
-            <div class="badge-row" style="display: flex; justify-content: space-between; margin-top:-20;">
+            <div class="badge-row" style="display: flex; justify-content: space-between; margin: top -20px;">
                 <!-- Badge 6 -->
                 <div class="badge-col" data-iframe-width="200" data-iframe-height="360" data-share-badge-id="1bbebfad-09bb-4147-8426-1e637c772842" data-share-badge-host="https://www.credly.com"></div>
                 <!-- Badge 7 -->
