--- a/works.html
+++ b/works.html
@@ -67,8 +67,8 @@
                                 </div>
                                 <div class="d-flex align-items-center justify-content-between">
                                     <div class="project-info">
-                                        <p>WEB DESIGNING</p>
-                                        <h1>Dynamic</h1>
+                                        <p>GOOGLE</p>
+                                        <h1>PROJECT MANAGEMENT</h1>
                                     </div>
                                     <a href="work-details.html" class="project-btn">
                                         <img src="assets/images/icon.svg" alt="Button">
@@ -86,8 +86,8 @@
                                 </div>
                                 <div class="d-flex align-items-center justify-content-between">
                                     <div class="project-info">
-                                        <p>PHOTOGRAPHY</p>
-                                        <h1>Diesel H1</h1>
+                                        <p>STANFORD AND DEEPLEARNING.AI</p>
+                                        <h1>MACHINE LEARNING</h1>
                                     </div>
                                     <a href="work-details.html" class="project-btn">
                                         <img src="assets/images/icon.svg" alt="Button">
@@ -110,8 +110,8 @@
                                     </div>
                                     <div class="d-flex align-items-center justify-content-between">
                                         <div class="project-info">
-                                            <p>mOBILE DESIGNING</p>
-                                            <h1>Seven Studio</h1>
+                                            <p>ALTASSIAN UNIVERSITY</p>
+                                            <h1>JIRA</h1>
                                         </div>
                                         <a href="work-details.html" class="project-btn">
                                             <img src="assets/images/icon.svg" alt="Button">
@@ -129,8 +129,8 @@
                                     </div>
                                     <div class="d-flex align-items-center justify-content-between">
                                         <div class="project-info">
-                                            <p>Branding</p>
-                                            <h1>Raven Studio</h1>
+                                            <p>IFB INDUSTRIES LTD.</p>
+                                            <h1>SIX SIGMA GREEN BELT</h1>
                                         </div>
                                         <a href="work-details.html" class="project-btn">
                                             <img src="assets/images/icon.svg" alt="Button">
@@ -150,8 +150,8 @@
                                     </div>
                                     <div class="d-flex align-items-center justify-content-between">
                                         <div class="project-info">
-                                            <p>mOBILE DESIGNING</p>
-                                            <h1>Submarine</h1>
+                                            <p>IBM</p>
+                                            <h1>DATA SCIENCE</h1>
                                         </div>
                                         <a href="IBM.html" class="project-btn">
                                             <img src="assets/images/icon.svg" alt="Button">
