--- a/works.html
+++ b/works.html
@@ -79,7 +79,7 @@
                         
                         <div data-aos="zoom-in">
                             <div class="project-item shadow-box">
-                                <a class="overlay-link" href="work-details.html"></a>
+                                <a class="overlay-link" href="machinelearning.html"></a>
                                 <img src="assets/images/bg1.png" alt="BG" class="bg-img">
                                 <div class="project-img">
                                     <img src="assets/images/project2.jpg" alt="Project">
@@ -89,7 +89,7 @@
                                         <p>STANFORD AND DEEPLEARNING.AI</p>
                                         <h1>MACHINE LEARNING</h1>
                                     </div>
-                                    <a href="work-details.html" class="project-btn">
+                                    <a href="machinelearning.html" class="project-btn">
                                         <img src="assets/images/icon.svg" alt="Button">
                                     </a>
                                 </div>
@@ -132,7 +132,7 @@
                                             <p>IFB INDUSTRIES LTD.</p>
                                             <h1>SIX SIGMA GREEN BELT</h1>
                                         </div>
-                                        <a href="work-details.html" class="project-btn">
+                                        <a href="SixSigma.html" class="project-btn">
                                             <img src="assets/images/icon.svg" alt="Button">
                                         </a>
                                     </div>
