--- a/index.html
+++ b/index.html
@@ -221,8 +221,7 @@
 
                                 <div class="client-item">
                                     <h1>07</h1>
-                                    <p>Patents <br></p>
-                                </div>
+                                    <p>Intellectual <br>Properties</p>                                </div>
 
                                 <div class="client-item">
                                     <h1>15</h1>
