--- a/contact.html
+++ b/contact.html
@@ -76,7 +76,7 @@
                                     <i class="iconoir-phone"></i>
                                 </div>
                                 <div class="right">
-                                    <span>Contact Us</span>
+                                    <span>Call me</span>
                                     <h4>+91-8124608408</h4>
                                     <h4></h4>
                                 </div>
