--- a/contact.html
+++ b/contact.html
@@ -95,7 +95,7 @@
 
                         <h3 data-aos="fade-up">Social Info</h3>
                         <ul class="social-links d-flex align-center" data-aos="zoom-in">
-                            <li><a class="shadow-box" href="#"><i class="iconoir-linkedln"></i></a></li>
+                            <li><a class="shadow-box" href="#"><i class="iconoir-linkedin"></i></a></li>
                             <li><a class="shadow-box" href="#"><i class="iconoir-twitter"></i></a></li>
                             <li><a class="shadow-box" href="#"><i class="iconoir-instagram"></i></a></li>
                         </ul>
