--- a/contact.html
+++ b/contact.html
@@ -95,9 +95,8 @@
 
                         <h3 data-aos="fade-up">Social Info</h3>
                         <ul class="social-links d-flex align-center" data-aos="zoom-in">
-                            <li><a class="shadow-box" href="#"><i class="iconoir-linkedin"></i></a></li>
-                            <li><a class="shadow-box" href="#"><i class="iconoir-twitter"></i></a></li>
-                            <li><a class="shadow-box" href="#"><i class="iconoir-instagram"></i></a></li>
+                            <li><a class="shadow-box" href="https://www.linkedin.com/in/mridul-ranjan-upadhyay-0662a6121"><i class="iconoir-linkedin"></i></a></li>
+                            <li><a class="shadow-box" href="https://www.instagram.com/mr_robot.___/"><i class="iconoir-instagram"></i></a></li>
                         </ul>
                     </div>
 
