--- a/index.html
+++ b/index.html
@@ -182,12 +182,8 @@
                                 <div class="about-profile-box info-box shadow-box h-full">
                                     <img src="assets/images/bg1.png" alt="BG" class="bg-img">
                                     <div class="inner-profile-icons shadow-box">
-                                        <a href="#">
-                                            <i class="iconoir-dribbble"></i>
-                                        </a>
-                                        <a href="#">
-                                            <i class="iconoir-twitter"></i>
-                                        </a>
+                                        <li><a class="shadow-box" href="https://www.linkedin.com/in/mridul-ranjan-upadhyay-0662a6121"><i class="iconoir-linkedin"></i></a></li>
+                                        <li><a class="shadow-box" href="https://www.instagram.com/mr_robot.___/"><i class="iconoir-instagram"></i></a></li>
                                     </div>
                                     <div class="d-flex align-items-center justify-content-between">
                                         <div class="infos">
