--- a/works.html
+++ b/works.html
@@ -33,9 +33,10 @@
 
                     <nav class="navbar">
                         <ul class="menu">
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="about.html">About</a></li>
-                            <li class="active"><a href="works.html">Works</a></li>
+                            <li class="active"><a href="index.html">Home</a></li>
+                            <li><a href="about.html">Resume</a></li>
+                            <li><a href="works.html">Portfolio</a></li>
+                            <li><a href="works.html">Certifications</a></li>
                             <li><a href="contact.html">Contact</a></li>
                         </ul>
                         <a href="contact.html" class="theme-btn">Let's talk</a>
@@ -161,21 +162,9 @@
                             </div>
 
                             <div data-aos="zoom-in" class="flex-1">
-                                <div class="project-item shadow-box">
-                                    <a class="overlay-link" href="IBM.html"></a>
-                                    <img src="assets/images/bg1.png" alt="BG" class="bg-img">
-                                    <div class="project-img">
-                                        <img src="assets/images/project6.jpg" alt="Project">
-                                    </div>
+                                <div class="project-item">
                                     <div class="d-flex align-items-center justify-content-between">
                                         <div class="project-info">
-                                            <p>wEB DESIGNING</p>
-                                            <h1>Hydra Merc</h1>
-                                        </div>
-                                        <a href="work-details.html" class="project-btn">
-                                            <img src="assets/images/icon.svg" alt="Button">
-                                        </a>
-                                    </div>
                                 </div>
 
                             </div>
