--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <ul class="menu">
                             <li class="active"><a href="index.html">Home</a></li>
                             <li><a href="about.html">Resume</a></li>
-                            <li><a href="works.html">Portfolio</a></li>
+                            <li><a href="https://band-turtle-0a0.notion.site/Mridul-s-Portfolio-048b946af879435a966e7171ded2a0d9">Portfolio</a></li>
                             <li><a href="works.html">Certifications</a></li>
                             <li><a href="contact.html">Contact</a></li>
                         </ul>
