--- a/contact.html
+++ b/contact.html
@@ -103,30 +103,31 @@
                         <div class="shadow-box">
                             <img src="assets/images/bg1.png" alt="BG" class="bg-img">
                             <img src="assets/images/icon3.png" alt="Icon">
-                            <h1>Let’s work <span>together1.</span></h1>
-                            <form method="POST" action="https://wpriverthemes.com/landing/gridx-html/mailer.php">
+                            <h1>Let’s work <span>together.</span></h1>
+                            <form action="https://formspree.io/f/xknaavyn" method="POST">
+                                <input type="hidden" name="_subject" value="New Contact Form Submission">
                                 <div class="alert alert-success messenger-box-contact__msg" style="display: none" role="alert">
                                     Your message was sent successfully.
                                 </div>
                                 <div class="input-group">
-                                    <input type="text" name="full-name" id="full-name" placeholder="Name *">
+                                    <input type="email" name="email" placeholder="Your email" required>
                                 </div>
                                 <div class="input-group">
-                                    <input type="email" name="email" id="email" placeholder="Email *">
+                                    <textarea name="message" placeholder="Your message" required></textarea>
                                 </div>
+                                <!-- your other form fields go here -->
                                 <div class="input-group">
-                                    <input type="text" name="subject" id="subject" placeholder="Your Subject *">
-                                </div>
-                                <div class="input-group">
-                                    <textarea name="message" id="message" placeholder="Your Message *"></textarea>
-                                </div>
-                                <div class="input-group">
-                                    <button class="theme-btn submit-btn" name="submit" type="submit">Send Message</button>
+                                    <button class="theme-btn submit-btn" type="submit" onclick="showSuccessMessage()">Send</button>
                                 </div>
                             </form>
                         </div>
-                    </div>
-                    
+                    </div>  
+                    <script>
+                        function showSuccessMessage() {
+                            var successMessage = document.querySelector('.alert-success');
+                            successMessage.style.display = 'block';
+                        }
+                    </script>
                 </div>
             </div>
         </section>
