--- a/contact.html
+++ b/contact.html
@@ -98,19 +98,35 @@
                             <li><a class="shadow-box" href="https://www.instagram.com/mr_robot.___/"><i class="iconoir-instagram"></i></a></li>
                         </ul>
                     </div>
-                    <form action="https://formspree.io/f/xknaavyn" method="POST">
-                        <label>
-                          Your email:
-                          <input type="email" name="email">
-                        </label>
-                        <label>
-                          Your message:
-                          <textarea name="message"></textarea>
-                        </label>
-                        <!-- your other form fields go here -->
-                        <button type="submit">Send</button>
-                      </form>
-                      
+                    <div data-aos="zoom-in" class="contact-form">
+                        <div class="shadow-box">
+                          <img src="assets/images/bg1.png" alt="BG" class="bg-img">
+                          <img src="assets/images/icon3.png" alt="Icon">
+                          <h1>Let’s work <span>together.</span></h1>
+                          <form action="https://formspree.io/f/xknaavyn" method="POST">
+                            <input type="hidden" name="_subject" value="New Contact Form Submission">
+                            <div class="alert alert-success messenger-box-contact__msg" style="display: none" role="alert">
+                              Your message was sent successfully.
+                            </div>
+                            <div class="input-group">
+                              <input type="text" name="name" placeholder="Name *" required>
+                            </div>
+                            <div class="input-group">
+                              <input type="email" name="_replyto" placeholder="Email *" required>
+                            </div>
+                            <div class="input-group">
+                              <input type="text" name="subject" placeholder="Your Subject *" required>
+                            </div>
+                            <div class="input-group">
+                              <textarea name="message" placeholder="Your Message *" required></textarea>
+                            </div>
+                            <div class="input-group">
+                              <button class="theme-btn submit-btn" type="submit" onclick="showSuccessMessage()">Send Message</button>
+                            </div>
+                          </form>
+                        </div>
+                      </div>
+                                            
                 </div>
             </div>
         </section>
