--- a/SixSigma.html
+++ b/SixSigma.html
@@ -17,6 +17,8 @@
     <link rel="stylesheet" href="assets/css/aos.css">
 
     <link rel="stylesheet" href="assets/css/style.css">
+    <!--=============== favicons ===============-->
+    <link rel="shortcut icon" href="images/favicon.ico">
 </head>
 <body>
 
