--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,8 @@
     <link rel="stylesheet" href="assets/css/aos.css">
 
     <link rel="stylesheet" href="assets/css/style.css">
+    <!--=============== favicons ===============-->
+    <link rel="shortcut icon" href="assets/images/favicon.ico">
 </head>
 <body>
 
