Header Updated, portfolio and icon modifications

--- a/machinelearning.html
+++ b/machinelearning.html
@@ -118,9 +118,10 @@
                         <img src="assets/images/logo.png" alt="Logo">
                     </a>
                     <ul class="footer-menu">
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="works.html">Works</a></li>
+                        <li class="active"><a href="index.html">Home</a></li>
+                        <li><a href="credentials.html">Resume</a></li>
+                        <li><a href="https://band-turtle-0a0.notion.site/Mridul-s-Portfolio-048b946af879435a966e7171ded2a0d9">Portfolio</a></li>
+                        <li><a href="works.html">Certifications</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                     <p class="copyright">
