--- a/credentials.html
+++ b/credentials.html
@@ -35,9 +35,10 @@
 
                     <nav class="navbar">
                         <ul class="menu">
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="about.html">About</a></li>
-                            <li><a href="works.html">Works</a></li>
+                            <li class="active"><a href="index.html">Home</a></li>
+                            <li><a href="credentials.html">Resume</a></li>
+                            <li><a href="https://band-turtle-0a0.notion.site/Mridul-s-Portfolio-048b946af879435a966e7171ded2a0d9">Portfolio</a></li>
+                            <li><a href="works.html">Certifications</a></li>
                             <li><a href="contact.html">Contact</a></li>
                         </ul>
                         <a href="contact.html" class="theme-btn">Let's talk</a>
@@ -65,14 +66,12 @@
                                 <div class="img-box">
                                     <img src="assets/images/me.png" alt="About Me">
                                 </div>
-                                <h2>David Henderson</h2>
-                                <p>@davidhenderson</p>
+                                <h2>Mridul Ranjan Upadhyay</h2>
+                                <p>Project Manager</p>
         
                                 <ul class="social-links d-flex justify-content-center">
-                                    <li><a href="#"><i class="iconoir-dribbble"></i></a></li>
-                                    <li><a href="#"><i class="iconoir-twitter"></i></a></li>
-                                    <li><a href="#"><i class="iconoir-instagram"></i></a></li>
-                                    <li><a href="#"><i class="iconoir-facebook-tag"></i></a></li>
+                                    <li><a href="https://www.linkedin.com/in/mridul-ranjan-upadhyay-0662a6121"><i class="iconoir-linkedin"></i></a></li>
+                                    <li><a href="https://www.instagram.com/mr_robot.___/"><i class="iconoir-instagram"></i></a></li>
                                 </ul>
         
                                 <a href="contact.html" class="theme-btn">Contact Me</a>
