six SIGMA UPDATE AND FAVICON CORRECTION

--- a/SixSigma.html
+++ b/SixSigma.html
@@ -18,7 +18,7 @@
 
     <link rel="stylesheet" href="assets/css/style.css">
     <!--=============== favicons ===============-->
-    <link rel="shortcut icon" href="images/favicon.ico">
+    <link rel="shortcut icon" href="assets/images/favicon.ico">
 </head>
 <body>
 
@@ -79,27 +79,27 @@
                             <img src="assets/images/icon3.png" alt="Icon">
                             <ul>
                                 <li>
-                                    <p>Year</p>
-                                    <h4>2023</h4>
+                                    <p>ISSUED ON</p>
+                                    <h4>March, 2023</h4>
                                 </li>
                                 <li>
-                                    <p>Client</p>
-                                    <h4>Raven Studio</h4>
+                                    <p>ISSUED BY</p>
+                                    <h4>IFB Industries Ltd.</h4>
                                 </li>
                                 <li>
-                                    <p>Services</p>
-                                    <h4>Web Design</h4>
-                                </li>
-                                <li>
-                                    <p>Project</p>
-                                    <h4>Dynamic</h4>
+                                    <p>SKILLS GAINED</p>
+                                    <h4>DMAIC Framework</h4>
+                                    <h4>Statistical analysis</h4>
+                                    <h4>Risk Mitigation</h4>
+                                    <h4>Performance Metrics</h4>
+                                    <h4>Problem-solving</h4>
                                 </li>
                             </ul>
                         </div>
                         <div class="right-details">
                             <h3>Description</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit utsadi sfejdis aliquam, purus sit amet luctus venenatis, lectus magna sansit trandis fringilla urna, porttitor rhoncus dolor purus non enim dollors praesent tabasi elementum facilisis leo, vel fringilla est ullamcorper eget nulla facilisi etiam facilisis dignissim diam quis enim lobortis scelerisque.</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit utsadi sfejdis aliquam, purus sit amet luctus venenatis, lectus magna sansit trandis fringilla urna, porttitor rhoncus dolor purus non enim dollors praesent tabasi elementum facilisis leo, vel fringilla est ullamcorper eget nulla facilisi etiam facilisis dignissim diam quis enim lobortis scelerisque iin fermentumisa dui faucibus in ornare.Lorem ipsum dolor sit.</p>
+                            <p>Achieving Six Sigma Certification has transformed me into a highly effective project manager. By embracing a data-driven approach, I make informed decisions and mitigate risks with precision. Applying the DMAIC framework, I optimize processes and ensure quality outcomes. With enhanced stakeholder engagement and communication skills, I align projects with their needs, building strong relationships. This certification has empowered me to lead cross-functional teams, solve complex problems, and deliver exceptional results. With an unwavering focus on continuous improvement and customer satisfaction, I am now a highly capable and impactful project manager, driving success in every endeavor.</p>
+                            <p>Special thanks to MBB Himanshu Sharma for guiding me to achieve my Six Sigma certification, and to Dr. Hwanjoo Myung for the prestigious award.</p>
                         </div>
                     </div>
                 </div>
