--- a/credentials.html
+++ b/credentials.html
@@ -19,7 +19,7 @@
 
     <link rel="stylesheet" href="assets/css/style.css">
     <!--=============== favicons ===============-->
-    <link rel="shortcut icon" href="images/favicon.ico">
+    <link rel="shortcut icon" href="assets/images/favicon.ico">
     <!-- Hotjar Tracking Code for https://mridulranjanupadhyay.github.io/ -->
 <script>
     (function(h,o,t,j,a,r){
