--- a/works.html
+++ b/works.html
@@ -19,7 +19,7 @@
 
     <link rel="stylesheet" href="assets/css/style.css">
     <!--=============== favicons ===============-->
-    <link rel="shortcut icon" href="images/favicon.ico">
+    <link rel="shortcut icon" href="assets/images/favicon.ico">
 </head>
 <body>
 
